--- a/app/views/static_pages/support.html.erb
+++ b/app/views/static_pages/support.html.erb
@@ -1,21 +1,43 @@
-<h1>Support</h1>
+<div id="wrapper">
+    <div id="container">
 
-<hr>
-<div class="row">
-<div class="medium-6 columns">
-        <div class="circle">
-            <p><u>Post your concern here</u></p>
-            <p> Our users are the reason for our existance so feel free to 
-            make enquires concerning the app.
+        <section class="open-book">
+            <header>
+                <h1>BookLib</h1>
+                <h6>The online Library</h6>
+            </header>
+            <article>
+                <h2 class="chapter-title">Support</h2>
+
+                <p>
+                Post your concern here
+             Our users are <mark>the reason </mark>for our existence so feel free to
+            make any enquires whatsoever concerning the BookLib.
+            After you post we will take a look and get back to you as soon as possible .Remember to
+            leave your email!!
+            <br>
+            </p>
+            <p align="center"> <button class="button success"> Post a concern </button></p>
+
+            <p>
+            Share your suggestions
+            Your suggestions may be but not limited to:
+             </p>
+                <ol>
+                    <li>"<mark class="blue">Some features you feel you need and they ain't there.</mark>"</li>
+                    <li>"<mark class="orange">Something you believe we can do to make your involvement more effective </mark>"</li>
+                    <li>"<mark class="green"> Or just something you really love about the application.</mark>"</li>
+
+                    <li>"<mark class="red">A defect you found  something that is not working as expected.</mark>"</li>
+                    <br>
+                    <li>"What if I found <s>a typo</s><sup>an error in the content</sup>?" Let us know about that too!!</li>
+                </ol>
+            <p align="center"> <button class="button success"> Make a suggestion</button></p>
+            </article>
+
+        </section>
+
     </div>
-    </div>
-<div class="medium-6 columns">
-        <div class="circle">
-            <p><u> Share your suggestions</u></p>
-            <p> Do you have anything in mind you wonna see in the next release?
-            Share with and maybe or maybe not it will be added.</p>
-    </div>
-    </div>
-    </div>
-    <br>
-    <br>
+</div>
+
+
