--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <div id="cover">
     <div class="page-centered">
         <h1>BookLib</h1>
-        <p> BookLib is an online Library for borrowing books.<br>
+        <p> BookLib is an online Library.<br>
         Signup to start enjoying our services or just search through to see our stocks</p>
         <p> <%= link_to "Signup",  (signup_path unless logged_in),  class: "button success large" %>
 </div>
