--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,10 +1,13 @@
+<hr>
 <div class="row">
-<h1> Password Reset </h1>
+    <h1> Password Reset </h1>
     <%= form_for(:password_reset, url: password_resets_path) do |f| %>
-        <div class="small-5">
-        <%= f.label :username %>
-        <%= f.text_field :username %> <br>
+        <div class="small-8">
+            <div class="small-offset-4">
+                <%= f.label :username %>
+                <%= f.text_field :username %>
+                <%= f.submit "Submit", class: "button alert" %>
+            <% end %>
+            </div>
         </div>
-        <%= f.submit "Submit" %>
-    <% end %>
-    </div>
+</div>
