--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,8 @@
         <h1>BookLib</h1>
         <p> BookLib is an online Library.<br>
         Signup to start enjoying our services or just search through to see our stocks</p>
-        <p> <%= link_to "Signup",  (signup_path unless logged_in),  class: "button success large" %>
+        <p> <%= link_to_unless(logged_in, "Signup", { controller: "users", action: "new"},
+                               {class: "button success large"} )%>
 </div>
 </div>
 <hr>
