--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -298,7 +298,7 @@ body {
     }
 
     .open-book:before {
-        background-color: #8B4513;
+        background-color: #009900;
         border-radius: 0.25em;
         bottom: -1em;
         content: '';
