--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,9 +1,14 @@
+
+body {
+    background-color: gray;
+}
 .top-bar{
     li {
        display: inline;
        font-size:20px;
        font-weight:bold;
        font-family:courier new;
+       color: black;
        a{
        color: green;
   }    }
@@ -45,7 +50,5 @@
 
 
 }
-
-
 
 
