remove compass gem

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,7 +1,6 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-  @import 'compass';
   @import 'mixins';
 
 #cover{
@@ -9,7 +8,7 @@
     background-attachment: fixed;
     position: relative;
     height: 600px;
-    @include background-size(cover);
+    // @include background-size(cover);
     .page-centered {
         color: white;
         @include center-text(-50%, -50%);
