--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <hr>
 <section>
-    <h1> Join the Library!!<h1>
+    <h1> Join the Library!!</h1>
             <%= form_for(@user) do |f| %>
                 <%= render 'shared/error_messages', object: f.object %>
 
